# Costanza

ros2_ws/: README.md  clean_setup.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/gazebo_pose_publisher/share/gazebo_pose_publisher/: package.bash  package.zsh
ros2_ws/install/gz_pose_publisher/share/gz_pose_publisher/: package.bash  package.zsh
ros2_ws/install/ionic_demo/share/ionic_demo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/multirobot_spawn/share/multirobot_spawn/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/nav2_minimal_tb4_description/share/nav2_minimal_tb4_description/: local_setup.sh  package.sh
ros2_ws/install/spawn_osoyoo/lib/spawn_osoyoo/: spawn_robot_node
ros2_ws/install/spawn_osoyoo/share/spawn_osoyoo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/models/osoyoo/: model.config  model.sdf
ros2_ws/src/multirobot_spawn/: package.xml  setup.cfg  setup.py
ros2_ws/src/multirobot_spawn_obs/: package.xml  setup.cfg  setup.py
ros2_ws/src/multirobot_spawn_obs/launch/: multi_robot_spawn_obs.launch.py
ros2_ws/src/shepherding_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/shepherding_control/shepherding_control/: controller_node.py
ros2_ws/src/spawn_osoyoo/: setup.cfg  setup.py
ros2_ws/worlds/: big_world.sdf  big_world_obs.sdf  car_world.sdf  car_world_multiple.sdf  custom_world.sdf  small_world.sdf  small_world_obs.sdf
(+18 files in other folders)
