<?xml version="1.0"?>
<package format="3">
  <name>multirobot_spawn_obs</name>
  <version>0.0.1</version>
  <description>Launch package per spawn di robot Osoyoo e Turtlebot4 in Gazebo con ROS2 e ros_gz_bridge.</description>
  <maintainer email="cinzia251996@gmail.com">Cinzia Tomaselli</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

